# swift-experimental-string-processing

./: .gitignore  .license_header_template  .licenseignore  CMakeLists.txt  Package.swift  README.md
.github/: CODEOWNERS
.github/workflows/: pull_request.yml
Documentation/: BigPicture.md  DSLAPIWalkthough.md  DeclarativeStringProcessing.md  ImplementationMusings.md  LibraryExtensibleRegexLiterals.md  ProgrammersManual.md
Documentation/Evolution/: CharacterClasses.md  CustomRegexComponent.md  DelimiterSyntax.md  MatchingSemantics.md  ProposalOverview.md  RegexBuilderDSL.md  RegexLiteralPitch.md  RegexLiterals.md  RegexSyntax.md  RegexSyntaxRunTimeConstruction.md  (+4 more)
Sources/: CMakeLists.txt
Sources/_MatchingEngine/: Builder.swift  CMakeLists.txt  Consume.swift
Sources/_MatchingEngine/Engine/: Backtracking.swift  Builder.swift  Capture.swift  Consume.swift  Engine.swift  InstPayload.swift  Instruction.swift  Processor.swift  Program.swift  Registers.swift  Tracing.swift
Sources/_MatchingEngine/Regex/: TreeProtocols.swift
Sources/_MatchingEngine/Regex/AST/: AST.swift  ASTAction.swift  ASTBuilder.swift  ASTEntity.swift  ASTPrinting.swift  ASTProtocols.swift  Atom.swift  CaptureStructure.swift  Conditional.swift  CustomCharClass.swift  Group.swift  MatchingOptions.swift  Quantification.swift  Quantifier.swift
Sources/_MatchingEngine/Regex/Parse/: CaptureStructure.swift  CharacterPropertyClassification.swift  DelimiterLexing.swift  Diagnostics.swift  LexicalAnalysis.swift  Location.swift  Mocking.swift  Parse.swift  Source.swift  SourceLocation.swift  SourceRange.swift  SyntaxOptions.swift
Sources/_MatchingEngine/Regex/Printing/: DumpAST.swift  PrettyPrinter.swift  PrintAsCanonical.swift  PrintAsPattern.swift  RenderRanges.swift
Sources/_MatchingEngine/Utility/: AllScalars.swift  Formatting.swift  Misc.swift  Misc_2.swift  MissingUnicode.swift  Peek.swift  Protocols.swift  TypeConstruction.swift  TypedIndex.swift  TypedInt.swift
Sources/_RegexParser/: CMakeLists.txt
Sources/_RegexParser/Regex/: TreeProtocols.swift
Sources/_RegexParser/Regex/AST/: AST.swift  Atom.swift  Conditional.swift  CustomCharClass.swift  Group.swift  MatchingOptions.swift  Quantification.swift
Sources/_RegexParser/Regex/BNF/: BNF.swift  BNFConvert.swift
Sources/_RegexParser/Regex/Parse/: CaptureList.swift  CaptureStructure.swift  CharacterPropertyClassification.swift  CompilerInterface.swift  DelimiterLexing.swift  Diagnostics.swift  LexicalAnalysis.swift  Mocking.swift  Parse.swift  Sema.swift  Source.swift  SourceLocation.swift  SyntaxOptions.swift
Sources/_RegexParser/Regex/Printing/: DumpAST.swift  PrettyPrinter.swift  PrintAsBNF.swift  PrintAsCanonical.swift
Sources/_RegexParser/Utility/: Errors.swift  Misc.swift  MissingUnicode.swift  TypeConstruction.swift
Sources/_StringProcessing/: ASTBuilder.swift  ByteCodeGen+DSLList.swift  ByteCodeGen.swift  CMakeLists.txt  Capture.swift  CharacterClass.swift  Compiler.swift  ConsumerInterface.swift  Executor.swift  LegacyCapture.swift  LiteralPrinter.swift  MatchingOptionSet.swift  MatchingOptions.swift  PrintAsPattern.swift  StringExtras.swift  _CharacterClassModel.swift
Sources/_StringProcessing/Algorithms/Algorithms/: Contains.swift  FirstRange.swift  Matches.swift  Ranges.swift  Replace.swift  Split.swift  StartsWith.swift  SubstringSearcher.swift  Trim.swift
Sources/_StringProcessing/Algorithms/Consumers/: CollectionConsumer.swift  FixedPatternConsumer.swift  ManyConsumer.swift  PredicateConsumer.swift  RegexConsumer.swift
Sources/_StringProcessing/Algorithms/Matching/: FirstMatch.swift  MatchReplace.swift  MatchResult.swift  Matches.swift  MatchingCollectionConsumer.swift  MatchingCollectionSearcher.swift
Sources/_StringProcessing/Algorithms/Searchers/: CollectionSearcher.swift  ConsumerSearcher.swift  NaivePatternSearcher.swift  PatternOrEmpty.swift  PredicateSearcher.swift  TwoWaySearcher.swift  ZSearcher.swift
Sources/_StringProcessing/DequeModule/: CollectionHelpers.swift  _DequeSlot.swift  _UnsafeDequeHandle.swift  _UnsafeDequeSegments.swift
Sources/_StringProcessing/DequeModule/Deque/: Deque+Collection.swift  Deque+Descriptions.swift  Deque+Extras.swift  Deque+Testing.swift
Sources/_StringProcessing/Documentation.docc/Extensions/: Regex.md
Sources/_StringProcessing/Engine/: Backtracking.swift  Consume.swift  Engine.swift  InstPayload.swift  Instruction.swift  MEBuilder.swift  MEBuiltins.swift  MECapture.swift  MEProgram.swift  MEQuantify.swift  MEReverseQuantify.swift  Metrics.swift  Processor.swift  Registers.swift  StringProcessor.swift  Structuralize.swift  Tracing.swift
Sources/_StringProcessing/Legacy/: HareVM.swift  LegacyCompile.swift  RECode.swift  TortoiseVM.swift  VirtualMachine.swift
Sources/_StringProcessing/Optimizations/: AutoPossessification.swift
Sources/_StringProcessing/Regex/: ASTConversion.swift  AnyRegexOutput.swift  Core.swift  CustomComponents.swift  DSLConsumers.swift  DSLList.swift  DSLTree.swift  MapOutput.swift  Match.swift  Options.swift  TextualRegex.swift
Sources/_StringProcessing/RegexDSL/: ASTConversion.swift  Anchor.swift  AnyRegexOutput.swift  Assertion.swift  Builder.swift  Concatenation.swift  Core.swift  DSL.swift  DSLAST.swift  DSLCapture.swift  DSLConsumers.swift  DSLSourceLocation.swift  DSLTree.swift  DynamicCaptures.swift  Match.swift  Options.swift  Variadics.swift
Sources/_StringProcessing/Unicode/: ASCII.swift  CaseConversion.swift  CharacterProps.swift  Data.swift  Decoding.swift  Graphemes.swift  NFC.swift  NecessaryEvils.swift  Normalization.swift  ScalarProps.swift  WordBreaking.swift  WordView.swift  Words.swift
Sources/_StringProcessing/Utility/: ASTBuilder.swift  AsciiBitset.swift  Misc.swift  Protocols.swift  RegexFactory.swift  Traced.swift  TypeConstruction.swift  TypeVerification.swift  TypedIndex.swift  TypedInt.swift
Tests/: LinuxMain.swift
Tests/Prototypes/: CMakeLists.txt
Tests/Prototypes/PEG/: PEG.swift  PEGInterpreter.swift  PEGTranspile.swift  PEGVM.swift  Printing.swift
Utils/: createBenchmark.py  generateEmails.py
(+305 files in other folders)
