
add_library(_MatchingEngine
  Engine/Backtracking.swift
  Engine/Builder.swift
  Engine/Capture.swift
  Engine/Consume.swift
  Engine/Engine.swift
  Engine/InstPayload.swift
  Engine/Instruction.swift
  Engine/Processor.swift
  Engine/Program.swift
  Engine/Registers.swift
  Engine/Tracing.swift
  Regex/AST/AST.swift
  Regex/AST/ASTAction.swift
  Regex/AST/ASTProtocols.swift
  Regex/AST/Atom.swift
  Regex/AST/Conditional.swift
  Regex/AST/CustomCharClass.swift
  Regex/AST/Group.swift
  Regex/AST/MatchingOptions.swift
  Regex/AST/Quantification.swift
  Regex/Parse/CaptureStructure.swift
  Regex/Parse/CharacterPropertyClassification.swift
  Regex/Parse/Diagnostics.swift
  Regex/Parse/LexicalAnalysis.swift
  Regex/Parse/Mocking.swift
  Regex/Parse/Parse.swift
  Regex/Parse/Source.swift
  Regex/Parse/SourceLocation.swift
  Regex/Parse/SyntaxOptions.swift
  Regex/Printing/DumpAST.swift
  Regex/Printing/PrettyPrinter.swift
  Regex/Printing/PrintAsCanonical.swift
  Regex/Printing/PrintAsPattern.swift
  Regex/Printing/RenderRanges.swift
  Utility/AllScalars.swift
  Utility/Formatting.swift
  Utility/Misc.swift
  Utility/MissingUnicode.swift
  Utility/Protocols.swift
  Utility/TypeConstruction.swift
  Utility/TypedIndex.swift
  Utility/TypedInt.swift)
target_compile_options(_MatchingEngine PRIVATE
  -enable-library-evolution)
