
add_library(_StringProcessing
  Algorithms/Algorithms/Contains.swift
  Algorithms/Algorithms/FirstRange.swift
  Algorithms/Algorithms/Ranges.swift
  Algorithms/Algorithms/Replace.swift
  Algorithms/Algorithms/Split.swift
  Algorithms/Algorithms/StartsWith.swift
  Algorithms/Algorithms/Trim.swift
  Algorithms/Consumers/CollectionConsumer.swift
  Algorithms/Consumers/FixedPatternConsumer.swift
  Algorithms/Consumers/ManyConsumer.swift
  Algorithms/Consumers/PredicateConsumer.swift
  Algorithms/Consumers/RegexConsumer.swift
  Algorithms/Searchers/CollectionSearcher.swift
  Algorithms/Searchers/ConsumerSearcher.swift
  Algorithms/Searchers/NaivePatternSearcher.swift
  Algorithms/Searchers/PatternOrEmpty.swift
  Algorithms/Searchers/PredicateSearcher.swift
  Algorithms/Searchers/TwoWaySearcher.swift
  Algorithms/Searchers/ZSearcher.swift
  ASTBuilder.swift
  Capture.swift
  CharacterClass.swift
  Compiler.swift
  ConsumerInterface.swift
  Executor.swift
  Legacy/HareVM.swift
  Legacy/LegacyCompile.swift
  Legacy/RECode.swift
  Legacy/TortoiseVM.swift
  Legacy/VirtualMachine.swift
  RegexDSL/Builder.swift
  RegexDSL/Concatenation.swift
  RegexDSL/Core.swift
  RegexDSL/DSL.swift
  RegexDSL/DSLCapture.swift
  RegexDSL/DynamicCaptures.swift)
target_compile_options(_StringProcessing PRIVATE
  -enable-library-evolution)
target_link_libraries(_StringProcessing PUBLIC
  _MatchingEngine)
