
add_library(_StringProcessing
  Algorithms/Algorithms/Contains.swift
  Algorithms/Algorithms/FirstRange.swift
  Algorithms/Algorithms/Ranges.swift
  Algorithms/Algorithms/Replace.swift
  Algorithms/Algorithms/Split.swift
  Algorithms/Algorithms/StartsWith.swift
  Algorithms/Algorithms/Trim.swift
  Algorithms/Consumers/CollectionConsumer.swift
  Algorithms/Consumers/FixedPatternConsumer.swift
  Algorithms/Consumers/ManyConsumer.swift
  Algorithms/Consumers/PredicateConsumer.swift
  Algorithms/Consumers/RegexConsumer.swift
  Algorithms/Matching/FirstMatch.swift
  Algorithms/Matching/Matches.swift
  Algorithms/Matching/MatchingCollectionConsumer.swift
  Algorithms/Matching/MatchingCollectionSearcher.swift
  Algorithms/Matching/MatchReplace.swift
  Algorithms/Matching/MatchResult.swift
  Algorithms/Searchers/CollectionSearcher.swift
  Algorithms/Searchers/ConsumerSearcher.swift
  Algorithms/Searchers/NaivePatternSearcher.swift
  Algorithms/Searchers/PatternOrEmpty.swift
  Algorithms/Searchers/PredicateSearcher.swift
  Algorithms/Searchers/TwoWaySearcher.swift
  Algorithms/Searchers/ZSearcher.swift
  Engine/Backtracking.swift
  Engine/Consume.swift
  Engine/Engine.swift
  Engine/InstPayload.swift
  Engine/Instruction.swift
  Engine/MEBuilder.swift
  Engine/MEBuiltins.swift
  Engine/MECapture.swift
  Engine/MEProgram.swift
  Engine/MEQuantify.swift
  Engine/Metrics.swift
  Engine/Processor.swift
  Engine/Registers.swift
  Engine/Structuralize.swift
  Engine/Tracing.swift
  Regex/AnyRegexOutput.swift
  Regex/ASTConversion.swift
  Regex/Core.swift
  Regex/CustomComponents.swift
  Regex/DSLTree.swift
  Regex/Match.swift
  Regex/Options.swift
  Unicode/ASCII.swift
  Unicode/CaseConversion.swift
  Unicode/CharacterProps.swift
  Unicode/Comparison.swift
  Unicode/Decoding.swift
  Unicode/Encodings.swift
  Unicode/Formatting.swift
  Unicode/NecessaryEvils.swift
  Unicode/NFC.swift
  Unicode/NumberParsing.swift
  Unicode/ScalarProps.swift
  Unicode/Transcoding.swift
  Unicode/UCD.swift
  Unicode/Validation.swift
  Unicode/WordBreaking.swift
  Utility/AsciiBitset.swift
  Utility/ASTBuilder.swift
  Utility/Misc.swift
  Utility/Protocols.swift
  Utility/RegexFactory.swift
  Utility/Traced.swift
  Utility/TypedIndex.swift
  Utility/TypedInt.swift
  Utility/TypeVerification.swift
  _CharacterClassModel.swift
  ByteCodeGen.swift
  Capture.swift
  Compiler.swift
  ConsumerInterface.swift
  Executor.swift
  MatchingOptions.swift
  PrintAsPattern.swift)
target_compile_options(_StringProcessing PRIVATE
  -enable-library-evolution)
target_link_libraries(_StringProcessing PUBLIC
  _RegexParser)
